Se corrigen bugs

--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_es.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_es.properties
@@ -8,7 +8,7 @@ calculator.medidaHashVacia=Seleccione una medida de tasa hash
 calculator.tasaHashVacia=Escriba la tasa hash
 calculator.tipoCambioVacio=Seleccione un tipo de cambio
 calculator.tasaSeleccionada=Tasa seleccionada: {0} hash/segundo
-calculator.tasaCambioSeleccionado=Tasa de cambio: {0}
+calculator.tasaCambioSeleccionado=Tasa de cambio: {0} {1}
 calculator.exchangeRateSource=Origen de la tasa de cambio
 calculator.bcPerBlock=Bitcoins por bloque
 calculator.siguienteDificultad=Siguiente factor
