--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
@@ -8,7 +8,7 @@ calculator.medidaHashVacia=S\u00E9lectionnez une mesure de taux de hash
 calculator.tasaHashVacia=Tapez le taux de hash
 calculator.tipoCambioVacio=S\u00E9lectionnez un taux de change
 calculator.tasaSeleccionada=D\u00E9bit s\u00E9lectionn\u00E9\: {0} hash / seconde
-calculator.tasaCambioSeleccionado=Taux de change: {0}
+calculator.tasaCambioSeleccionado=Taux de change: {0} {1}
 calculator.exchangeRateSource=Origine du taux de change
 calculator.bcPerBlock=Bitcoins par bloc
 calculator.siguienteDificultad=Facteur suivant
