Banners de publicidad en portada

--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_en.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_en.properties
@@ -1,1 +1,4 @@
 calculator.title=Are you new and want to start in the world of Bitcoin? Do not know which miner to buy? Do you want to know how much you will earn by generating Bitcoin? This calculator will help you know how much your performance is paid based on the capabilities of your team and where you want to sell the amount generated.
+index.banner.1=Do you want to get started with BitCoin?
+index.banner.2=Have you bought a bitcoin miner and want to know their winnings?
+index.banner.3=Quickly and conveniently calculate how much you will earn by mining bitcoins
