Enlaces de inicio y calculadora

--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_en.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_en.properties
@@ -24,3 +24,6 @@ calculator.porDia=Per day
 calculator.porSemana=Per week
 calculator.porMes=Per month
 calculator.copyright=\u00A9 2017 All rights reserved
+
+home.goToCalculator=Go to calculator
+home=Home
