--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
@@ -24,3 +24,6 @@ calculator.porDia=Par jour
 calculator.porSemana=Par semaine
 calculator.porMes=Par mois
 calculator.copyright=\u00A9 2017 Tous droits r\u00E9serv\u00E9s
+
+home.goToCalculator=Aller \u00E0 la calculatrice
+home=Accueil
