--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_es.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_es.properties
@@ -1,4 +1,6 @@
 calculator.title=\u00BFEres nuevo y quieres iniciarte en el mundo del Bitcoin? \u00BFNo sabes cu\u00E1l minero comprarte? Quieres saber cu\u00E1nto vas a ganar generando Bitcoin? Esta calculadora te ayudar\u00E1 a saber cu\u00E1nto se paga tu rendimiento en funci\u00F3n de las capacidades de tu equipo y d\u00F3nde desees vender la cantidad generada.
+index.landing.section.features=Caracter\u00EDsticas
+index.landing.section.stats=Estad\u00EDsticas
 index.banner.1=\u00BFQuiere iniciarse en el manejo del BitCoin?
 index.banner.2=\u00BFSe ha comprado un minero de bitcoins y desea conocer sus ganancias?
 index.banner.3=Calcule de forma r\u00E1pida y c\u00F3moda cu\u00E1nto ganar\u00E1 minando bitcoins
