--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_fr.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_fr.properties
@@ -1,4 +1,18 @@
 calculator.title=Tu es nouveau et tu veux t'initier dans le monde des Bitcoins ? Tu ne sais pas quel mineur acheter ? Tu veux savoir combien tu vas gagner en g\u00E9n\u00E9rant des Bitcoins ? Cette calculatrice va t'aider \u00E0 calculer ton gain en fonction de la capacit\u00E9 de ton \u00E9quipe et \u00E0 savoir o\u00F9 vendre la quantit\u00E9 g\u00E9n\u00E9r\u00E9e.
+index.landing.section.features=Caract\u00E9ristiques
+index.landing.section.stats=Statistiques
 index.banner.1=Voulez-vous commencer par BitCoin?
 index.banner.2=Avez-vous achet\u00E9 un mineur bitcoin et souhaitez conna\u00EEtre vos gains?
 index.banner.3=Calculez rapidement et commod\u00E9ment combien vous gagnerez en extrayant les bitcoins
+index.feature.title.1=Calcul bas\u00E9 sur la devise
+index.feature.icon.1=005-coins.png
+index.feature.content.1=Calculez vos gains bitcoin en fonction de votre devise. Actuellement disponible en euros et en dollars
+index.feature.title.2=Calcul selon la puissance
+index.feature.icon.2=003-plug.png
+index.feature.content.2=Calcul des bitcoins en fonction de la puissance de votre mineur. Disponible les trois m\u00E9triques les plus utilis\u00E9es
+index.feature.title.3=Statistiques par mineur
+index.feature.icon.3=002-bars.png
+index.feature.content.3=Des calculs statistiques qui vous permettront de d\u00E9cider quel mineur acheter. Actuellement en pr\u00E9paration
+index.feature.title.4=Classement des utilisateurs
+index.feature.icon.4=001-user.png
+index.feature.content.4=Nos utilisateurs peuvent entrer leurs donn\u00E9es de performance, ce qui nous aidera \u00E0 am\u00E9liorer les statistiques. Actuellement en pr\u00E9paration
