--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_en.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_en.properties
@@ -25,5 +25,5 @@ calculator.porSemana=Per week
 calculator.porMes=Per month
 calculator.copyright=\u00A9 2017 All rights reserved
 
-home.goToCalculator=Go to calculator
+home.goToCalculator=I want to try\!
 home=Home
