--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_es.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_es.properties
@@ -25,5 +25,5 @@ calculator.porSemana=Por semana
 calculator.porMes=Por mes
 calculator.copyright=\u00A9 2017 Todos los derechos reservados
 
-home.goToCalculator=Ir a la calculadora
+home.goToCalculator=Quiero probar\!
 home=Inicio
