--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
@@ -25,5 +25,5 @@ calculator.porSemana=Par semaine
 calculator.porMes=Par mois
 calculator.copyright=\u00A9 2017 Tous droits r\u00E9serv\u00E9s
 
-home.goToCalculator=Aller \u00E0 la calculatrice
+home.goToCalculator=Je veux essayer\!
 home=Accueil
