--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_pt.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_pt.properties
@@ -25,5 +25,5 @@ calculator.porSemana=Por semana
 calculator.porMes=Por m\u00EAs
 calculator.copyright=\u00A9 2017 Todos os direitos reservados
 
-home.goToCalculator=V\u00E1 para a calculadora
+home.goToCalculator=Quero provar\!
 home=Home
