--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_es.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_es.properties
@@ -18,3 +18,6 @@ index.feature.content.3=C\u00E1lculos estad\u00EDsticos que le har\u00E1n decidi
 index.feature.title.4=Ranking de usuarios
 index.feature.icon.4=001-user.png
 index.feature.content.4=Nuestros usuarios podr\u00E1n introducir los datos de sus rendimientos, lo que nos ayudar\u00E1 a mejorar las estad\u00EDsticas. Actualmente en preparaci\u00F3n
+error.title=Ha ocurrido un error
+error.parrafo.1=Para nuestro disgusto, ha ocurrido un error interno en este programa. Por favor cont\u00E1ctese con soporte t\u00E9cnico.
+error.parrafo.2=Si nuestro personal de soporte lo indica, copie y pegue el siguiente informe en un mensaje de correo electr\u00F3nico.
