Calculator to dialog popup

--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_fr.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_fr.properties
@@ -18,6 +18,7 @@ index.feature.content.3=Des calculs statistiques qui vous permettront de d\u00E9
 index.feature.title.4=Classement des utilisateurs
 index.feature.icon.4=001-user.png
 index.feature.content.4=Nos utilisateurs peuvent entrer leurs donn\u00E9es de performance, ce qui nous aidera \u00E0 am\u00E9liorer les statistiques. Actuellement en pr\u00E9paration
+index.demo.title=D\u00E9mo de la calculatrice
 error.title=Une erreur est survenue
 error.parrafo.1=\u00C0 notre grand regret, une erreur interne s'est produite dans ce programme. Veuillez contacter le support technique.
 error.parrafo.2=Si vous avez re\u00E7u des instructions de notre personnel de soutien, veuillez copier et coller le rapport suivant dans un courriel.
