--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_pt.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/PubliBundle_pt.properties
@@ -18,6 +18,7 @@ index.feature.content.3=C\u00E1lculos estat\u00EDsticos que far\u00E3o voc\u00EA
 index.feature.title.4=Ranking de usu\u00E1rios
 index.feature.icon.4=001-user.png
 index.feature.content.4=Nossos usu\u00E1rios podem inserir seus dados de desempenho, o que nos ajudar\u00E1 a melhorar as estat\u00EDsticas. Atualmente em prepara\u00E7\u00E3o
+index.demo.title=Demonstra\u00E7\u00E3o de calculadora
 error.title=Ocorreu um erro
 error.parrafo.1=Para nosso desgosto, ocorreu um erro interno neste programa. Por favor entre em contato com o suporte t\u00E9cnico.
 error.parrafo.2=Se instru\u00EDdo por nossa equipe de suporte, copie e cole o seguinte relat\u00F3rio em uma mensagem de e-mail.
