--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_es.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_es.properties
@@ -13,6 +13,8 @@ calculator.exchangeRateSource=Origen de la tasa de cambio
 calculator.bcPerBlock=Bitcoins por bloque
 calculator.siguienteDificultad=Siguiente factor
 calculator.pie.texto1=C\u00E1lculos proporcionados por
+calculator.pie.links=Enlaces \u00FAtiles
+calculator.pie.contact=Contacto
 calculator.noTraders=No se han registrado mercados de cambio
 calculator.currentTrader=Mercado actual
 calculator.selectTrader=Selecciona mercado
