--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_fr.properties
@@ -13,6 +13,8 @@ calculator.exchangeRateSource=Origine du taux de change
 calculator.bcPerBlock=Bitcoins par bloc
 calculator.siguienteDificultad=Facteur suivant
 calculator.pie.texto1=Calculs fournis par
+calculator.pie.links=Liens utiles
+calculator.pie.contact=Contact
 calculator.noTraders=Aucun march\u00E9 des changes enregistr\u00E9s
 calculator.currentTrader=March\u00E9 actuel
 calculator.selectTrader=S\u00E9lectionnez march\u00E9
