--- a/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_pt.properties
+++ b/bitcoincalculator-front/src/main/resources/net/bounceme/chronos/bitcoincalculator/MessageBundle_pt.properties
@@ -13,6 +13,8 @@ calculator.exchangeRateSource=Origem da taxa de c\u00E2mbio
 calculator.bcPerBlock=Bitcoins por bloco
 calculator.siguienteDificultad=Pr\u00F3ximo fator
 calculator.pie.texto1=C\u00E1lculos fornecidos por
+calculator.pie.links=Links \u00DAteis
+calculator.pie.contact=Entre em contato
 calculator.noTraders=Nenhum mercado de c\u00E2mbio foi registrado
 calculator.currentTrader=Mercado atual
 calculator.selectTrader=Selecione mercado
